CH04/CH04_L06/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping
spec:
  selector:
    matchLabels:
      app: ping
  replicas: 1
  template:
    metadata:
      labels:
        app: ping
    spec:
      containers:
        - name: ping
          image: strongjz/golang_example:0.0.4
          ports:
            - containerPort: 8080
            - containerPort: 8090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data
spec:
  selector:
    matchLabels:
      app: data
  replicas: 1
  template:
    metadata:
      labels:
        app: data
    spec:
      containers:
        - name: data
          image: strongjz/golang_example:0.0.4
          ports:
            - containerPort: 8080
            - containerPort: 8090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  selector:
    matchLabels:
      app: admin
  replicas: 1
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: strongjz/golang_example:0.0.4
          ports:
            - containerPort: 8080
            - containerPort: 8090
