CH04/CH04_L06/services-all.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-service
  labels:
    app: ping
spec:
  selector:
    app: ping
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: data-service
  labels:
    app: data
spec:
  selector:
    app: data
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  labels:
    app: admin
spec:
  selector:
    app: admin
  ports:
    - name: service-port
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: admin-port
      protocol: TCP
      port: 8090
      targetPort: 8090
