CH04/CH04_L06/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ping-service
            port:
              number: 8080
        path: /ping(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: data-service
            port:
              number: 8080
        path: /data(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: admin-service
            port:
              number: 8080
        path: /admin(/|$)(.*)
        pathType: Prefix
